# check_password

./: pyproject.toml
.devcontainer/: devcontainer.json
src/check_password/: __init__.py  app.py
